--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "word-puzzle-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tesselwolf.github.io",
+  "homepage": "https://sudopsi4.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +14,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
